[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/player/crosshair/Line.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/player/crosshair/CenterDot.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/player/crosshair/Crosshair.gd" type="Script" id=3]

[node name="Crosshair" type="Node2D"]
script = ExtResource( 3 )

[node name="CenterDot" parent="." instance=ExtResource( 2 )]

[node name="Line1" parent="." instance=ExtResource( 1 )]
position = Vector2( -7, 0 )

[node name="Line2" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, -7 )
rotation = 1.5708

[node name="Line3" parent="." instance=ExtResource( 1 )]
position = Vector2( 7, 0 )

[node name="Line4" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, 6.95039 )
rotation = 1.5708
